--- a/index.html
+++ b/index.html
@@ -48,29 +48,29 @@
       </div>
       <div class="col-md-6">
         <div class="panel panel-primary">
-          <div class="panel-heading">
+          <div class="panel-heading" ng-click='fillIn()'>
             Submit New Post
           </div>
           <div class="panel-body">
             <form class="form" ng-submit="addPost()">
               <div class="form-group">
                 <label>Title</label>
-                <input type="text" class="form-control" placeholder="title">
+                <input type="text" class="form-control" placeholder="title" ng-model='newPost.title'>
               </div>
               <div class="form-group">
                 <label>Body</label>
-                <textarea type="text" class="form-control" placeholder="body"></textarea>
+                <textarea type="text" class="form-control" placeholder="body" ng-model='newPost.body'></textarea>
               </div>
               <div class="form-group">
                 <label>Author</label>
-                <input type="text" class="form-control" placeholder="author">
+                <input type="text" class="form-control" placeholder="author" ng-model='newPost.author'>
               </div>
             </form>
           </div>
           <div class="panel-footer">
             <div class="row">
               <div class="col-md-6">
-                <button class="btn btn-info btn-block">Post!</button>
+                <button class="btn btn-info btn-block" ng-click='addPost(newPost)'>Post!</button>
               </div>
             </div>
           </div>
